* 2021-01-28 8.2.0.2
  do not use cpmCPUMemoryHCCommitted, except if you want mem usage > 100%
* 2021-01-27 8.2.0.1
  check the memory of all members in a cisco stack only if there are > 1 members
* 2021-01-22 8.2
  check the memory of all members in a cisco stack
* 2021-01-18 8.1.0.1
  bugfix in Bluecat jvm
* 2021-01-18 8.1
  add Bluecat Address Manager
* 2021-01-13 8.0.0.2
  bugfix in HOST-RESOURCE-MIB memory (Arista triggered)
  bugfix in CISCO-ENVMON-MIB, temperatures > 200
* 2021-01-13 8.0.0.1
  bugfix in arista bgp, mitigate admin down
* 2020-10-22 8.0
  broadcast traffic is now shown as percentage of the overall traffic (...broadcast_in) and percentage of the available bandwitdth (..._broadcast_usage_in).
  errors and discards are now calculated as percentage of all received/sent packets.
  TenGig-VRF-MPLS-Dingsbums without errors and discard metrics are no longer treated as StackSubs.
* 2020-10-12 7.13
  add Vormetric Appliance
* 2020-09-18 7.12.2
  add some exceptions to hrDeviceDiskStorage and hrDeviceNetwork
* 2020-09-08 7.12.1.3
  fix a bug in mode count-routes, update glplugin
* 2020-07-13 7.12.1.2
  improve output for connect-vips
* 2020-07-13 7.12.1.1
  bugfix in UCD-MIB swap
* 2020-07-10 7.12.1
  try to fallback to ucd if neither sysUptime nor sysDescr exist
* 2020-06-04 7.12
  add mode watch-vips and connect-vips for F5
* 2020-06-02 7.11.1
  check the number of nodes in a Fortigate cluster
* 2020-05-21 7.11
  add bgp4 modes for arista, use 2nd context for cisco bgp4
* 2020-05-19 7.10.4.1
  fix a typo
* 2020-05-05 7.10.4
  check increase of sessions for Cisco
  (detect freeze with  --mode vpn-sessions --criticalx sessions_per_sec=0.001:)
  add AVM 7580
* 2020-03-20 7.10.3
  add mode vpn-sessions (IOS and ASA)
* 2020-03-16 7.10.2.1
  blacklist nfs-mounts in hrDeviceDiskStorage
* 2020-03-10 7.10.2
  fix HP Aruba checks, add nore from ENTITY-SENSOR-MIB
* 2020-02-20 7.10.1.9
  fix a bug in interface-etherstats for OLD-CISCO-INTERFACES-MIB