@@ -1,4 +1,4 @@
-package Classes::Bluecat::Component::MgmtSubsystem;
+package Classes::Bluecat::AddressManager::Component::MgmtSubsystem;
 our @ISA = qw(Monitoring::GLPlugin::SNMP::Item);
 use strict;
 use constant { OK => 0, WARNING => 1, CRITICAL => 2, UNKNOWN => 3 };
