@@ -1,3 +1,4 @@
+* 2021-02-08 8.3 split Bluecat in AddressManager and DnsDhcpServer
 * 2021-01-28 8.2.0.2
   do not use cpmCPUMemoryHCCommitted, except if you want mem usage > 100%
 * 2021-01-27 8.2.0.1
